[gd_scene load_steps=24 format=3 uid="uid://dhgb3d43pomnh"]

[ext_resource type="Script" path="res://player.gd" id="1_3mfl8"]
[ext_resource type="Texture2D" uid="uid://wxjcbe4kpuh1" path="res://Assets/Weapons/Guns/1 Characters/3 Cyborg/Idle1.png" id="1_nry8j"]
[ext_resource type="Script" path="res://Cyborg.gd" id="2_hlwao"]
[ext_resource type="Texture2D" uid="uid://txm6auma5nmt" path="res://Assets/Weapons/Guns/2 Guns/9_1.png" id="2_lurov"]
[ext_resource type="Texture2D" uid="uid://dwyi7na215vmo" path="res://Assets/Weapons/Guns/3 Hands/3 Cyborg/3.png" id="3_0igx5"]
[ext_resource type="Texture2D" uid="uid://e48o7uhmoxxi" path="res://Assets/Weapons/Guns/1 Characters/3 Cyborg/Run1.png" id="4_tw2bh"]
[ext_resource type="Texture2D" uid="uid://b8ljs1up5utj8" path="res://Assets/Weapons/Guns/4 Shoot_effects/6_1.png" id="7_sak2p"]
[ext_resource type="Texture2D" uid="uid://cifenjurd8gxj" path="res://Assets/Weapons/Guns/2 Guns/10_1.png" id="8_vprq8"]

[sub_resource type="Animation" id="Animation_gy6s0"]
resource_name = "GunSmokeIdle"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cyborg/GunSmokeIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_qx2a5"]
resource_name = "GunSmokeRun"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cyborg/GunSmokeRun:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cyborg/GunSmokeRun:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0vels"]
resource_name = "IdlePistol"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cyborg/CyborgIdlePistol:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_8fqe0"]
resource_name = "IdleShotgun"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cyborg/CyborgIdleShotgun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_cr2up"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cyborg/CyborgIdlePistol:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cyborg/CyborgRunPistol:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cyborg/GunSmokeIdle:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cyborg/GunSmokeRun:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cyborg/GunSmokeRun:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Cyborg/CyborgIdleShotgun:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Cyborg/CyborgRunShotgun:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_a3ktc"]
resource_name = "RunPistol"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cyborg/CyborgRunPistol:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_novyn"]
resource_name = "RunShotgun"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cyborg/CyborgRunShotgun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q0euh"]
_data = {
"GunSmokeIdle": SubResource("Animation_gy6s0"),
"GunSmokeRun": SubResource("Animation_qx2a5"),
"IdlePistol": SubResource("Animation_0vels"),
"IdleShotgun": SubResource("Animation_8fqe0"),
"RESET": SubResource("Animation_cr2up"),
"RunPistol": SubResource("Animation_a3ktc"),
"RunShotgun": SubResource("Animation_novyn")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ud4f6"]
load_path = "res://.godot/imported/6_1.png-b48c38bc5375177bf5ea0cf1ee753468.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykx4e"]
size = Vector2(27.7778, 37.7778)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81m80"]
size = Vector2(26, 36)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lyh1c"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6yws"]
bg_color = Color(0.498039, 1, 0.498039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b30ue"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2jvp"]
bg_color = Color(0.798964, 0.43286, 0.794157, 1)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1.8, 1.8)
collision_mask = 3
platform_floor_layers = 4294967040
script = ExtResource("1_3mfl8")

[node name="Cyborg" type="Node2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
script = ExtResource("2_hlwao")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cyborg"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_q0euh")
}
speed_scale = 0.7

[node name="CyborgIdlePistol" type="Sprite2D" parent="Cyborg"]
unique_name_in_owner = true
visible = false
texture_filter = 1
texture = ExtResource("1_nry8j")
offset = Vector2(11, 0)
hframes = 4

[node name="pistol" type="Sprite2D" parent="Cyborg/CyborgIdlePistol"]
z_index = -1
texture_filter = 1
position = Vector2(10, -3.33333)
scale = Vector2(0.5625, 0.5625)
texture = ExtResource("2_lurov")
offset = Vector2(11, 0)

[node name="armpistol" type="Sprite2D" parent="Cyborg/CyborgIdlePistol"]
z_index = -1
texture_filter = 1
position = Vector2(-8.33333, 1.11111)
texture = ExtResource("3_0igx5")
offset = Vector2(11, 0)

[node name="CyborgRunPistol" type="Sprite2D" parent="Cyborg"]
unique_name_in_owner = true
visible = false
texture_filter = 1
texture = ExtResource("4_tw2bh")
offset = Vector2(6, 0)
hframes = 6

[node name="pistol" type="Sprite2D" parent="Cyborg/CyborgRunPistol"]
z_index = -1
texture_filter = 1
position = Vector2(11.6667, 5.96046e-08)
scale = Vector2(0.5625, 0.5625)
texture = ExtResource("2_lurov")
offset = Vector2(7, 0)

[node name="armpistol" type="Sprite2D" parent="Cyborg/CyborgRunPistol"]
z_index = -1
texture_filter = 1
position = Vector2(-5, 5)
texture = ExtResource("3_0igx5")
offset = Vector2(8, 0)

[node name="CyborgIdleShotgun" type="Sprite2D" parent="Cyborg"]
unique_name_in_owner = true
visible = false
texture_filter = 1
texture = ExtResource("1_nry8j")
offset = Vector2(11, 0)
hframes = 4

[node name="shotgun" type="Sprite2D" parent="Cyborg/CyborgIdleShotgun"]
z_index = -1
texture_filter = 1
position = Vector2(5, -3.33333)
scale = Vector2(0.5625, 0.5625)
texture = ExtResource("8_vprq8")
offset = Vector2(11, 0)

[node name="armshotgun" type="Sprite2D" parent="Cyborg/CyborgIdleShotgun"]
z_index = -1
texture_filter = 1
position = Vector2(-8.33333, 1.11111)
texture = ExtResource("3_0igx5")
offset = Vector2(11, 0)

[node name="CyborgRunShotgun" type="Sprite2D" parent="Cyborg"]
unique_name_in_owner = true
visible = false
texture_filter = 1
texture = ExtResource("4_tw2bh")
offset = Vector2(6, 0)
hframes = 6

[node name="shotgun" type="Sprite2D" parent="Cyborg/CyborgRunShotgun"]
z_index = -1
texture_filter = 1
position = Vector2(7.77778, 0.555556)
scale = Vector2(0.5625, 0.5625)
texture = ExtResource("8_vprq8")
offset = Vector2(7, 0)

[node name="armshotgun" type="Sprite2D" parent="Cyborg/CyborgRunShotgun"]
z_index = -1
texture_filter = 1
position = Vector2(-5, 5)
texture = ExtResource("3_0igx5")
offset = Vector2(8, 0)

[node name="GunSmokeIdle" type="Sprite2D" parent="Cyborg"]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(36.1111, -2.77778)
texture = ExtResource("7_sak2p")
hframes = 6

[node name="GunSmokeRun" type="Sprite2D" parent="Cyborg"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(38.8889, 1.11111)
texture = SubResource("CompressedTexture2D_ud4f6")
hframes = 6

[node name="Hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(1.11111, 6.66667)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_ykx4e")
debug_color = Color(0.887226, 0.000285897, 0.802573, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -784
limit_top = -784
limit_right = 784
limit_bottom = 784
limit_smoothed = true
editor_draw_limits = true

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-18.8889, -1.66667)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, 6.667)
shape = SubResource("RectangleShape2D_81m80")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -20.0
offset_top = -19.0
offset_right = 21.0
offset_bottom = -16.0
theme_override_styles/background = SubResource("StyleBoxFlat_lyh1c")
theme_override_styles/fill = SubResource("StyleBoxFlat_d6yws")
step = 1.0
value = 100.0
allow_greater = true
show_percentage = false

[node name="Overheal" type="ProgressBar" parent="HealthBar"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = -5.44444
offset_right = 41.0
offset_bottom = -2.44444
theme_override_styles/background = SubResource("StyleBoxFlat_b30ue")
theme_override_styles/fill = SubResource("StyleBoxFlat_u2jvp")
min_value = 100.0
max_value = 200.0
step = 1.0
value = 100.0
allow_greater = true
show_percentage = false
